# notif-me-senpai

./: .env.azure.example  .env.development  .gitignore  LICENSE  README.md  main.py  pyproject.toml
backend/: main.py
backend/agents/: groq_llm.py  sample_agent.py
backend/agents/azure/: agent_test.py  azure_configs.py  personality_agent.py
backend/chat_completions/: chatbot.py
backend/core/: env_file.py
backend/data_store/: agents.yaml  prompt_loader.py  tasks.yaml
backend/databases/: memory.py
backend/routers/: v1.py
