[project]
name = "notif-me-senpai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.2.6",
    "crewai>=1.8.1",
    "fastapi>=0.128.0",
    "langchain>=1.2.6",
    #"mcp>=1.23.0" #Dependency pypi:mcp:1.16.0 is vulnerable (CVE-2025-66416, Score: 8.1)
]
